<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="pref_user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="pref_mood"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="pref_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <MultiSelectListPreference
        android:title="@string/pref_title_languages"
        android:key="pref_languages" />
    <ListPreference
        android:key="pref_default_language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_default_language" />

</PreferenceScreen>
